--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,27 @@
 .App-link {
   color: #61dafb;
 }
+.grid{
+  display: grid;
+  grid-template-columns: auto auto auto ;
+  background-color: #2196F3;
+  padding: 50px;
+}
+.image{
+  width: 400px;
+  height: 500px;
+  display: inline-block;
+  padding: 50px;
+}
+.element .image{
+  padding: 20px;
+  font-size: 30px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  text-align: center;
+  
+  
+}
 
 @keyframes App-logo-spin {
   from {
