--- a/src/components/css/template.css
+++ b/src/components/css/template.css
@@ -2,9 +2,9 @@
 
 .grid{
     display: grid;
-    grid-template-columns: auto auto auto ;
+    grid-template-columns: 1fr 3fr 2fr;
     background-color: #2196F3;
-    padding: 50px;
+     
   }
   .image{
     width: 400px;
@@ -13,13 +13,29 @@
     padding: 50px;
   }
   .element .image{
-    padding: 20px;
+     
+    grid-column: 1 / 4;
     font-size: 30px;
     background-repeat: no-repeat;
     background-size: contain;
-    text-align: center;
-    
-    
+    text-align: center; 
+  }
+  @media only screen and (max-width: 45em){
+    .grid{
+     grid-template-columns: 1fr 1fr;
+     margin-left: 0px;
+    } 
+    .element{
+     grid-column: 1 / 3;
+     background-size: cover;
+     margin-top: 40px;
+
+    } 
+    .image{
+      width: 200px;
+      height: 200px;
+      padding: 50px;
+    }
   }
   .memepage{
     width: auto;
